<resources>
    <string name="app_name" translatable="false">SchoolQuest</string>
    <string name="grup_a">GRUP A</string>
    <string name="grup_b">GRUP B</string>
    <string name="grup_c">GRUP C</string>
    <string name="noms">Noms</string>
    <string name="asignatura">Asignatura</string>
    <string name="grup_a_perfil">GRUP A</string>
    <string name="grup_b_perfil">GRUP B</string>
    <string name="grup_c_perfil">GRUP C</string>
    <string name="nivell">Nivell:</string>
    <string name="tasques_completades">Tasques completades</string>
    <string name="noms_alumne">Noms</string>
    <string name="grup">Grup:</string>
    <string name="nivell_perfil">Nivell:</string>
    <string name="xits_desbloquejats">Èxits desbloquejats</string>
    <string name="generar_informe">Generar informe</string>
    <string name="generar_informe_en_pdf">generar informe en pdf</string>
    <string name="crear_recompensa">Crear Recompensa</string>
    <string name="crear_tasca">Crear Tasca</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="contrasenya">Contrassenya</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="recuperar_contrassenya">Recuperar contrassenya</string>
    <string name="soc_alumne">Soc Alumne</string>
    <string name="soc_professor">Soc Professor</string>
    <string name="nova_tasca">Nova tasca</string>
    <string name="nom_de_la_tasca">Nom de la tasca</string>
    <string name="descripcio">Descripció</string>
    <string name="data">Data</string>
    <string name="xp" translatable="false">XP</string>
    <string name="experiencia">Experiéncia</string>
    <string name="sp" translatable="false">SP</string>
    <string name="school_points" translatable="false">School Points</string>
    <string name="nova_recompensa">Nova recompensa</string>
    <string name="nom_de_la_recompensa">Nom de la recompensa</string>
    <string name="subtasca">Subtasca</string>
    <string name="notificacions">Notificacions</string>
    <string name="idioma">Idioma</string>
    <string name="tanca_sesio">Tanca sessió</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="logo_schoolquest" translatable="false">Logo schoolquest</string>
    <string name="catala">Català</string>
    <string name="english">Àngles</string>
    <string name="espanol">Espanyol</string>
    <string name="openDrawer" translatable="false">openDrawer</string>
    <string name="CloseDrawer" translatable="false">CloseDrawer</string>
    <string name="alumnes_que_han_completat_la_tasca">Alumnes que han completat la tasca</string>
    <string name="enviar">Enviar</string>
    <string name="crear">Crear</string>
    <string name="corregir">corregir</string>
    <string name="recompensa">Recompensa</string>
    <string name="perfil">Perfil</string>
    <string name="tasques">Tasques</string>
    <string name="calendari">Calendari</string>
    <string name="botiga_de_recompenses">Botiga de recompenses</string>
    <string name="configuraci">Configuració</string>
    <string name="tancar_sessi">Tancar sessió</string>
    <string name="grup_a_select">Grup A</string>
    <string name="grup_b_select">Grup B</string>
    <string name="grup_c_select">Grup C</string>
    <string name="data_final">Data final</string>
    <string name="data_inicial">Data inicial</string>
    <string name="CrecioRecompensa">Creació de recompensa</string>
    <string name="RecompensaCreada">Recompensa creada</string>
    <string name="CreacioTasca">Creació de tasca</string>
    <string name="TascaCreada">Tasca creada</string>
    <string name="reviewDialog">Si t\'agrada SchoolQuest, si us plau feu una ressenya. Gràcies pel vostre suport!</string>
    <string name="rateButton">Valora SchoolQuest</string>
    <string name="askLater">Pregunta\'m més tard</string>
    <string name="noThanks">No, gràcies</string>
</resources>