<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Crear_Tasca">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutNovaTasca"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/nova_tasca"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:helperText="@string/nom_de_la_tasca"
                app:helperTextEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textFieldNovaTasca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutDescripcio"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:hint="@string/descripcio"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:helperText="@string/descripcio"
                app:helperTextEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textFieldDescripcio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutData"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:hint="@string/data"
                app:helperText="@string/data"
                app:helperTextEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textFieldData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutXP"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:hint="@string/xp"
                    app:helperText="@string/experiencia"
                    app:helperTextEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textFieldXP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutSP"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="20dp"
                    android:hint="@string/sp"
                    app:helperText="@string/school_points"
                    app:helperTextEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textFieldSP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_height="20dp"
                android:checked="false"
                android:text="@string/subtasca"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>