<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil_Professor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="409dp"
                android:layout_height="197dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="146dp"
                    android:layout_height="174dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_margin="25dp"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="@string/foto_de_perfil" />

                <LinearLayout
                    android:layout_width="177dp"
                    android:layout_height="173dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="25dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Noms"
                        style="@style/TextPerfils"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/noms" />

                    <View
                        android:id="@+id/divider"
                        style="@style/DividerPerfils"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/TextAsignatura"
                        style="@style/TextPerfils"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/asignatura" />

                    <View
                        android:id="@+id/divider2"
                        style="@style/DividerPerfils"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grup_a_perfil"
                    />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grup_b_perfil"
                    />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grup_c_perfil"
                    />
            </com.google.android.material.tabs.TabLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>