<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Configuracio">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/idioma"
                    android:textSize="20sp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/textButtonCat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/catala"
                    android:textSize="13sp"
                    android:textColor="@color/OrangeLight"
                    android:layout_gravity="end"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/textButtonEng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textSize="13sp"
                    android:textColor="@color/OrangeLight"
                    android:layout_gravity="end"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/textButtonEsp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/espanol"
                    android:textSize="13sp"
                    android:textColor="@color/OrangeLight"
                    android:layout_gravity="end"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNotificacions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/notificacions"
                    android:textSize="20sp"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:checked="false"
                    android:text="" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/textButtonLoginProfessor"
                android:layout_marginTop="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanca_sesio"
                android:textSize="20sp"
                android:textColor="@color/BlueLight"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>